samples/_failures_safe/1761355503_e2e9fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a54a622.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_8a54a622.c:139:13: error: expected expression at end of input
  139 |             for (int k = 0; k <
      |             ^~~
./samples/SAFE/__tmp_8a54a622.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a54a622.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a54a622.c:139:13: error: expected declaration or statement at end of input
